group = 'org.rpis5.chapters'
version = '0.0.1-SNAPSHOT'

buildscript {
  ext {
    springVersion = "2.3.4.RELEASE"
  }

  repositories {
    maven {
      url "https://plugins.gradle.org/m2/"
    }

    dependencies {
      classpath "org.springframework.boot:spring-boot-gradle-plugin:$springVersion"
      classpath "io.spring.gradle:dependency-management-plugin:1.0.10.RELEASE"
    }
  }
}

subprojects {
  apply plugin: 'java-library'
  apply plugin: "org.springframework.boot"
  apply plugin: 'io.spring.dependency-management'

  sourceCompatibility = JavaVersion.VERSION_11
  targetCompatibility = JavaVersion.VERSION_11

  repositories {
    jcenter()
    mavenCentral()
  }

  dependencies {
    compile('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
  }

}